# PixelFreeEffects

./: .gitignore  Podfile  README.md  README_en.md  pixbuffer.podspec  滤镜类型
PixelFreeEffects/: AppDelegate.h  AppDelegate.m  Info.plist  SceneDelegate.h  ViewController.h  ViewController.m  main.m
PixelFreeEffects.xcodeproj/: project.pbxproj
PixelFreeEffects.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PixelFreeEffects.xcworkspace/: contents.xcworkspacedata
PixelFreeEffects/Filters/: SMEffectFilter.h  SMEffectFilter.m
PixelFreeEffects/ViewController/: ViewController.h  ViewController.m
SMBeautyEngine_andriod/PixelFreeDemo/: build.gradle  settings.gradle
SMBeautyEngine_andriod/PixelFreeDemo/app/: CMakeLists.txt  build.gradle
SMBeautyEngine_andriod/PixelFreeDemo/app/src/androidTest/java/com/liuyue/pixelfreedemo/: ExampleInstrumentedTest.java
SMBeautyEngine_andriod/PixelFreeDemo/app/src/main/: AndroidManifest.xml
SMBeautyEngine_andriod/PixelFreeDemo/app/src/main/java/com/liuyue/pixelfreedemo/: MyApplication.java
SMBeautyEngine_andriod/PixelFreeDemo/app/src/main/java/com/liuyue/pixelfreedemo/activity/: MainActivity.java
SMBeautyEngine_andriod/PixelFreeDemo/app/src/main/java/com/liuyue/pixelfreedemo/camera/: CameraFacing.java  CameraHelper.java  CameraRender.java  CameraSetting.java  VideoFrame.java  VideoFrameListener.java
SMBeautyEngine_andriod/PixelFreeDemo/app/src/main/java/com/liuyue/pixelfreedemo/core/: BeautyType.java  EffectProcessor.java  ImageFormat.java  ImageInput.java  ImageRotation.java  ProcessType.java
SMBeautyEngine_andriod/PixelFreeDemo/app/src/main/java/com/liuyue/pixelfreedemo/gl/: ExternalTextureConverter.java  GLUtils.java  PreviewRenderer.java  TextureProcessor.java
SMBeautyEngine_andriod/PixelFreeDemo/app/src/main/java/com/liuyue/pixelfreedemo/utils/: AppUtils.java  PermissionUtils.java  ResourceUtils.java  ThreadUtils.java  ToastUtils.java
SMBeautyEngine_andriod/PixelFreeDemo/app/src/main/jni/: pixel_free_jni.cpp
SMBeautyEngine_andriod/PixelFreeDemo/app/src/main/jni/include/: pixelFree_c.hpp
SMBeautyEngine_andriod/PixelFreeDemo/app/src/main/res/layout/: activity_main.xml
SMBeautyEngine_andriod/PixelFreeDemo/app/src/main/res/raw/: base_fragment_shader.glsl  base_vertex_shader.glsl  texture_2d_fs.glsl  texture_external_fs.glsl  texture_vs.glsl
SMBeautyEngine_andriod/PixelFreeDemo/app/src/main/res/values/: strings.xml  themes.xml
SMBeautyEngine_andriod/PixelFreeDemo/app/src/main/res/values-night/: themes.xml
SMBeautyEngine_andriod/PixelFreeDemo/app/src/test/java/com/liuyue/pixelfreedemo/: ExampleUnitTest.java
SMBeautyEngine_andriod/app/: build.gradle
SMBeautyEngine_andriod/pixelfree_android_demo/: build.gradle  settings.gradle
SMBeautyEngine_andriod/pixelfree_android_demo/hapiAVRender/src/main/cpp/: CMakeLists.txt  hapiplay.cpp
SMBeautyEngine_andriod/pixelfree_android_demo/hapiAVRender/src/main/cpp/common/: AudioFrame.h  NativeImage.h
SMBeautyEngine_andriod/pixelfree_android_demo/hapiAVRender/src/main/cpp/include/libavutil/: ffversion.h
SMBeautyEngine_andriod/pixelfree_android_demo/hapiAVRender/src/main/cpp/include/libyuv/: mjpeg_decoder.h
SMBeautyEngine_andriod/pixelfree_android_demo/hapiAVRender/src/main/cpp/render/: OpenSLRender.cpp  OpenSLRender.h  VideoGLRender.cpp  VideoGLRender.h
SMBeautyEngine_andriod/pixelfree_android_demo/hapiAVRender/src/main/cpp/util/: GLUtils.cpp  LogUtil.h
SMBeautyEngine_andriod/pixelfree_android_demo/lib_pixelFree/src/main/cpp/: CMakeLists.txt  ndkpixelfree.cpp
SMBeautyEngine_andriod/pixelfree_android_demo/lib_pixelFree/src/main/cpp/Include/: pixelFree_c.hpp
SMBeautyEngine_flutter/pixelfree/: .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
SMBeautyEngine_harmonyOS/AppScope/: app.json5
SMBeautyEngine_iOS/: Podfile
SMBeautyEngine_iOS/PixelFree.framework/: Info.plist
SMBeautyEngine_iOS/SMBeautyEngine_iOS/: AppDelegate.h  AppDelegate.m  FUCamera.m  FUOpenGLView.h  (+17 more)
SMBeautyEngine_iOS/SMBeautyEngine_iOS.xcodeproj/: project.pbxproj
SMBeautyEngine_iOS/SMBeautyEngine_iOS.xcworkspace/: contents.xcworkspacedata
SMBeautyEngine_linux/: CMakeLists.txt  README.md  build.sh
SMBeautyEngine_linux/include/: gl.h  opengl.h
SMBeautyEngine_linux/pixelfreeLib/Include/: pixelFree_c.hpp
SMBeautyEngine_linux/src/: main.cpp  opengl.cpp
SMBeautyEngine_mac/: main.cc  opengl.cc  opengl.h  opengl_observer.h  readme_mac.md
SMBeautyEngine_win_python/: main.py
SMBeautyEngine_windows/: CMakeLists.txt  README.md
SMBeautyEngine_windows/Res/: pixelfreeAuth.lic
SMBeautyEngine_windows/include/: opengl.h  opengl_observer.h  stb_image.h
SMBeautyEngine_windows/pixelfreeLib/Include/: pixelFree_c.hpp
SMBeautyEngine_windows/src/: main.cpp  opengl.cpp  stb_image.cpp
SMUpdateCertificate/: DEPLOYMENT.md  QUICKSTART.md  main.go  start.sh
SMUpdateLicService/: .env.https.example  .env.production  API.md  Dockerfile  HTTPS_GUIDE.md  Makefile  QUICKSTART.md  README.md  admin_client.go  client_example.go  demo.sh  docker-compose.prod.yml  docker-compose.yml  generate_cert.sh  generate_production_cert.sh  go.mod  go.sum  main.go  start.sh  test_api.sh
SMUpdateService/: API.md  API_CHANGELOG.md  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  admin_client.go  client_example.go  demo.sh  docker-compose.yml  main.go  nginx.conf  start_https.sh  test_update_mechanism.sh
doc/: PreprocessorFixfree.java  api_android.md  api_flutter.md  api_iOS.md  custom_stickers.md  doc_android.md  doc_flutter.md  doc_iOS.md  doc_windows.md  frequently_asked_questions.md  release_note.md
pixelfreeHarmonyDEMO/: build-profile.json5
pixelfreeHarmonyDEMO/entry/src/main/cpp/: CMakeLists.txt  Index.cpp  log.h
pixelfreeHarmonyDEMO/entry/src/main/cpp/Manager/: GLManager.h
pixelfreeHarmonyDEMO/entry/src/main/cpp/render/: GLDrawPoints.cpp  GLOffScreenRender.h  GLRender.cpp  GLRenderNV21.h  GLRenderYUV.h  GLRenderYUYV.cpp  GLRenderYUYV.h
pixelfreeHarmonyDEMO/entry/src/main/cpp/sdk/manager/: PixfreeManager.cpp
pixelfreeHarmonyDEMO/entry/src/main/cpp/types/libentry/: oh-package.json5
(+694 files in other folders)
